--- a/topbar.ui
+++ b/topbar.ui
@@ -92,5 +92,22 @@
  <resources>
   <include location="res.qrc"/>
  </resources>
- <connections/>
+ <connections>
+  <connection>
+   <sender>sBox</sender>
+   <signal>returnPressed()</signal>
+   <receiver>sButton</receiver>
+   <slot>click()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>271</x>
+     <y>22</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>453</x>
+     <y>22</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
