--- a/bottombar.ui
+++ b/bottombar.ui
@@ -31,6 +31,9 @@
    </property>
    <item>
     <widget class="QGraphicsView" name="graphicsView">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
        <horstretch>0</horstretch>
