--- a/bottombar.ui
+++ b/bottombar.ui
@@ -72,7 +72,7 @@
       <number>0</number>
      </property>
      <item>
-      <widget class="QPushButton" name="pushButton_3">
+      <widget class="QPushButton" name="list">
        <property name="text">
         <string/>
        </property>
