--- a/pwin.ui
+++ b/pwin.ui
@@ -41,6 +41,9 @@ p, li { white-space: pre-wrap; }
      </property>
      <item>
       <widget class="QTableView" name="tabv">
+       <property name="editTriggers">
+        <set>QAbstractItemView::NoEditTriggers</set>
+       </property>
        <property name="selectionMode">
         <enum>QAbstractItemView::SingleSelection</enum>
        </property>
